--- a/app/views/leaderboard/users.html.erb
+++ b/app/views/leaderboard/users.html.erb
@@ -51,8 +51,7 @@
           <td class="hidden md:table-cell px-2 py-4"><%= rounded_number(user.total_followers) %></td>
         </tr>
       <% end %>
-
-      <% unless current_user_in_leaderboard || current_or_guest_user.is_a?(NullUser) %>
+      <% unless current_user_in_leaderboard || !current_or_guest_user.guest? %>
         <% if @current_user_rank %>
           <tr class="bg-yellow-100 dark:bg-yellow-700 border-b dark:border-gray-700">
             <td class="px-2 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white text-center"><%= @current_user_rank %></td>
