--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
   <div class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6 mt-4">
     <div class="flex justify-center mb-4">
       <form action="<%= posts_path %>" method="get" class="flex space-x-2">
-        <input type="text" name="query" placeholder="Search tweets..." class="px-4 py-2 border rounded-lg" value="<%= params[:query] %>">
+        <input type="text" name="query" placeholder="Search posts..." class="px-4 py-2 border rounded-lg" value="<%= params[:query] %>">
         <button type="submit" class="px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-700">
           Search
         </button>
@@ -16,6 +16,7 @@
       </form>
     </div>
     <%= render PostsTableComponent.new(posts: @posts) %>
-    <%= pagy_nav(@pagy).html_safe %>
+    <br />
+    <%= render(PaginationComponent.new(pagy: @pagy)) %>
   </div>
 </div>
