--- a/app/components/shared/alert_component.html.erb
+++ b/app/components/shared/alert_component.html.erb
@@ -1,3 +1,3 @@
-<div class="p-4 text-sm <%= text_color %> rounded-lg <%= bg_color %> dark:bg-gray-800 dark:text-<%= dark_text_color %>" role="alert">
+<div class="p-4 mb-4 text-sm <%= text_color %> rounded-lg <%= bg_color %> dark:bg-gray-800 dark:text-<%= dark_text_color %>" role="alert">
   <%= message %>
 </div>
