--- a/app/views/leaderboard/users.html.erb
+++ b/app/views/leaderboard/users.html.erb
@@ -75,7 +75,7 @@
 
 <% if current_or_guest_user.guest? %>
 <div class="text-center">
-  <%= render Shared::ButtonComponent.new(text: "Get Started", url: new_user_registration_path, method: :get) %>
+  <%= render Shared::ButtonComponent.new(text: "Get Started", url: new_user_registration_path) %>
   <p class="mt-4 text-gray-500 dark:text-gray-400">Unsure? <a href="/p/demo" class="text-blue-600 dark:text-blue-400">Check out our demo page</a></p>
 </div>
 <% end %>
