--- a/app/views/two_factor_authentications/show.html.erb
+++ b/app/views/two_factor_authentications/show.html.erb
@@ -28,7 +28,7 @@
           <%= f.text_field :otp_code, class: 'mt-1 block w-full rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm dark:bg-gray-700 dark:text-gray-300' %>
         </div>
         <div>
-          <%= render Shared::ButtonComponent.new(text: 'Enable Two-Factor Authentication', url: '', classes: 'w-full', in_form: true) %>
+          <%= render Shared::ButtonComponent.new(text: 'Enable Two-Factor Authentication', url: '', classes: 'w-full', in_form: true, method: :post) %>
         </div>
       <% end %>
     <% end %>
