--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,11 +24,11 @@
             <span class="align-middle">&nbsp;Echosight</span>
           </a>
           <div class="flex items-center space-x-3">
-            <%= render PrimaryActionButtonComponent.new(user: current_or_guest_user) %>
+            <%= render(PrimaryActionButtonComponent.new(user: current_or_guest_user, request: request)) %>
             <%= render 'shared/dark_mode_toggle_button' %>
           </div>
         <% else %>
-          <%= render Shared::NavBarComponent.new(user: current_or_guest_user) %>
+          <%= render Shared::NavBarComponent.new(user: current_or_guest_user, current_admin_user: current_admin_user) %>
         <% end %>
       </div>
     </header>
