--- a/app/components/dashboard_component.html.erb
+++ b/app/components/dashboard_component.html.erb
@@ -14,13 +14,15 @@ Yep 1. is perfect
 <div class="flex flex-col items-center">
 <% if show_steps_to_complete_message? %>
   <% if eligible_for_trial? %>
-  <div class="p-4 mb-4 text-sm text-yellow-800 rounded-lg bg-yellow-50 dark:bg-gray-800 dark:text-green-300" role="alert">
-    We are currently offering a <%= Subscription.trial_period %> day free trial for our early adopters. Subscribe now and pay in <%= Subscription.trial_period %> days.
-  </div>
+  <%= render(Shared::AlertComponent.new(
+    message: "We are currently offering a #{Subscription.trial_period} day free trial for our early adopters. Subscribe now and pay in #{Subscription.trial_period} days.",
+    alert_type: :green
+  )) %>
   <% end %>
-  <div class="p-4 mb-4 text-sm text-yellow-800 rounded-lg bg-yellow-50 dark:bg-gray-800 dark:text-yellow-300" role="alert">
-    To start leveraging the full capabilities of Echosight, please complete the steps below:
-  </div>
+  <%= render(Shared::AlertComponent.new(
+  message: "To start leveraging the full capabilities of Echosight, please complete the steps below:",
+  alert_type: :yellow
+)) %>
 <% end %>
 
 <% if show_subscription_message? %>
@@ -32,7 +34,7 @@ Yep 1. is perfect
         Subscribing requires a credit card, but we won't charge you until <%= ENV.fetch('TRIAL_PERIOD_DAYS') %> days have passed.<br>
       <% end %>
     </p>
-    <%= render Shared::ButtonComponent.new(text: "Subscribe", url: subscription_path, method: :get) %>
+    <%= render Shared::ButtonComponent.new(text: "Subscribe", url: subscription_path) %>
   <% end %>
 <% end %>
 
@@ -67,9 +69,24 @@ Yep 1. is perfect
 <% if show_happy_message? %>
   <%= render ContentBoxComponent.new do %>
     <%= render Shared::HeadingComponent.new(text: 'Welcome to Echosight', heading_type: :h2) %>
-    <p class="paragraph-base">You are connected to Twitter/X and we are collecting data from your account to generate your public page. Check out your <%= link_to "public page", public_page_path(current_user.handle) %>.</p>
+    <p class="paragraph-base">You are connected to <%= t(:twitter_title) %> and we are collecting data for your account.</p>
+
+    <p class="paragraph-base">Check out the following:</p>
+    <ul class="space-y-1 text-gray-500 list-disc list-inside dark:text-gray-400">
+        <li>
+            <%= link_to "Your Public Page", public_page_path(current_user.handle), class: 'text-blue-500 hover:underline' %>
+            <span>- View and share your analytics with potential advertisers.</span>
+        </li>
+        <li>
+            <%= link_to "Your Post Page", posts_path, class: 'text-blue-500 hover:underline' %>
+            <span>- Search and analyse your posts easily.</span>
+        </li>
+    </ul>
+    </p>
+
+
     <% if show_2fa_reminder? %>
-      <p class="paragraph-base">Remember to enable <%= link_to "two-factor authentication", two_factor_authentication_path %> on your Echosight account.</p>
+      <p class="paragraph-base mt-4">Remember to enable <%= link_to "two-factor authentication", two_factor_authentication_path, class: 'text-blue-500 hover:underline' %> on your Echosight account for added security.</p>
     <% end %>
   <% end %>
 <% end %>
