--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
             <span class="align-middle">&nbsp;Echosight</span>
           </a>
           <div class="flex items-center space-x-3">
-            <%= render(PrimaryActionButtonComponent.new(user: current_or_guest_user, request: request)) %>
+            <div class="hidden md:block"><%= render(PrimaryActionButtonComponent.new(user: current_or_guest_user, request: request)) %></div>
             <%= render 'shared/dark_mode_toggle_button' %>
           </div>
         <% else %>
