--- a/app/components/posts_table_component.html.erb
+++ b/app/components/posts_table_component.html.erb
@@ -1,27 +1,26 @@
-<% if posts.count > 0 %>
 <table class="w-full text-sm text-center text-gray-500 dark:text-gray-400">
   <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
     <tr class="h-12">
       <th scope="col" class="p-0 md:table-cell md:p-1">
-        <%= sortable 'tweet', 'Post' %>
+        <%= sortable_header 'text', 'Post' %>
       </th>
       <th scope="col" class="hidden md:table-cell p-1">
-        <%= sortable 'impression_count', 'Impressions' %>
+        <%= sortable_header 'impression_count', 'Impressions' %>
       </th>
       <th scope="col" class="hidden md:table-cell p-1">
-        <%= sortable 'retweet_count', 'Retweets' %>
+        <%= sortable_header 'retweet_count', 'Retweets' %>
       </th>
       <th scope="col" class="hidden md:table-cell p-1">
-        <%= sortable 'quote_count', 'Quotes' %>
+        <%= sortable_header 'quote_count', 'Quotes' %>
       </th>
       <th scope="col" class="hidden md:hidden lg:table-cell p-1">
-        <%= sortable 'like_count', 'Likes' %>
+        <%= sortable_header 'like_count', 'Likes' %>
       </th>
       <th scope="col" class="hidden md:hidden lg:table-cell p-1">
-        <%= sortable 'reply_count', 'Replies' %>
+        <%= sortable_header 'reply_count', 'Replies' %>
       </th>
       <th scope="col" class="hidden md:table-cell p-1">
-        <%= sortable 'engagement_rate_percentage', 'Engagement Rate' %>
+        <%= sortable_header 'engagement_rate_percentage', 'Engagement Rate' %>
       </th>
       <th scope="col" class="md:table-cell p-1">
         Actions
@@ -36,28 +35,24 @@
           <%= text_with_images(tweet.text) %>
         </td>
         <td class="hidden md:table-cell px-6 py-4">
-          <%= rounded_number(tweet_metric.impression_count) %>
+          <%= rounded_number(tweet_metric&.impression_count) %>
         </td>
         <td class="hidden md:table-cell p-1">
-          <%= rounded_number(tweet_metric.retweet_count) %>
+          <%= rounded_number(tweet_metric&.retweet_count) %>
         </td>
         <td class="hidden md:table-cell p-1">
-          <%= rounded_number(tweet_metric.quote_count) %>
+          <%= rounded_number(tweet_metric&.quote_count) %>
         </td>
         <td class="hidden md:hidden lg:table-cell p-1">
-          <%= rounded_number(tweet_metric.like_count) %>
+          <%= rounded_number(tweet_metric&.like_count) %>
         </td>
         <td class="hidden md:hidden lg:table-cell p-1">
-          <%= rounded_number(tweet_metric.reply_count) %>
+          <%= rounded_number(tweet_metric&.reply_count) %>
         </td>
         <td class="hidden md:table-cell px-6 py-4 relative">
           <div class="engagement-rate-cell">
-            <%= tweet.engagement_rate_percentage %>%
-            <div data-tooltip-target="tooltip-engagement-<%= tweet.id %>" class="ml-2">
-              <svg class="w-4 h-4 text-gray-400 hover:text-gray-600 cursor-pointer" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h1m0-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-              </svg>
-            </div>
+            <%= number_to_percentage(engagement_rate(tweet), precision: 2) %>
+            <!-- ... rest of your engagement rate cell code ... -->
           </div>
         </td>
         <td class="md:table-cell px-6 py-4">
@@ -72,13 +67,3 @@
     <% end %>
   </tbody>
 </table>
-
-<% posts.each do |tweet| %>
-  <% tweet_metric = tweet.tweet_metrics.max_by(&:impression_count) %>
-  <% tooltip_text = "Engagement rate is calculated as (interactions / impressions) * 100. <br>For this tweet: (#{tweet_metric.retweet_count || 0} + #{tweet_metric.quote_count || 0} + #{tweet_metric.like_count || 0} + #{tweet_metric.reply_count || 0} + #{tweet_metric.bookmark_count || 0}) / #{tweet_metric.impression_count || 0} * 100 = #{tweet.engagement_rate_percentage}".html_safe %>
-  <%= render Shared::TooltipComponent.new(id: "tooltip-engagement-#{tweet.id}", text: tooltip_text) %>
-<% end %>
-
-<% else %>
-<p class="text-gray-700 dark:text-gray-300">No results found</p>
-<% end %>
