--- a/app/components/public_page_component.html.erb
+++ b/app/components/public_page_component.html.erb
@@ -52,11 +52,11 @@
   <div class="flex justify-center items-center">
     <%= render Shared::DateRangeSelector.new(
       page_user_handle: page_user_handle,
-      date_range: params[:date_range],
+      date_range: @date_range,
       url_helper: ->(date_range) { public_page_path(handle: @page_user.handle, date_range: date_range) }
-      ) %>
+    ) %>
   </div>
-  <% end %>
+<% end %>
 
   <div class="flex flex-wrap">
     <%= count_cards %>
