--- a/app/views/shared/_meta.html.erb
+++ b/app/views/shared/_meta.html.erb
@@ -2,12 +2,21 @@
     <meta property="og:title" content="Echosight">
     <meta property="og:site_name" content="Echosight">
     <meta property="og:description" content="Optimize your Twitter presence with Echosight: Discover in-depth analytics, track follower growth, monitor engagement, and enhance your tweets for maximum impact.">
-    <meta property="og:image" content="<%= asset_url('og_image.png') %>">
     <meta property="og:url" content="https://app.echosight.io">
-     <meta property="og:type" content="website">
+    <meta property="og:type" content="website">
+
+    <% if content_for?(:social_graph_image) %>
+      <meta property="og:image" content="<%= content_for(:social_graph_image) %>">
+      <meta name="twitter:image" content="<%= content_for(:social_graph_image) %>">
+    <% else %>
+      <meta property="og:image" content="<%= asset_url('og_image.png') %>">
+      <meta name="twitter:image" content="<%= asset_url('og_image.png') %>">
+    <% end %>
 
     <meta name="twitter:card" content="<%= asset_url('og_image.png') %>">
     <meta name="twitter:site" content="@loftwah">
     <meta name="twitter:title" content="Echosight150790">
     <meta name="twitter:description" content="Optimize your Twitter presence with Echosight: Discover in-depth analytics, track follower growth, monitor engagement, and enhance your tweets for maximum impact.">
-    <meta name="twitter:image" content="<%= asset_url('og_image.png') %>">
+
+
+https://chatgpt.com/c/910da886-fb43-4e4d-8276-ece002a7de41
