Customers social graph url and title

--- a/app/components/public_page_component.html.erb
+++ b/app/components/public_page_component.html.erb
@@ -1,4 +1,4 @@
-  <% content_for :title, "#{page_user_name || page_user_handle}'s Public Page" %>
+  <% content_for :title, "#{page_user_name || page_user_handle}'s Public Page on Echosight" %>
 
  <!-- start of social graph image -->
   <div class="relative">
