--- a/app/views/shared/_meta.html.erb
+++ b/app/views/shared/_meta.html.erb
@@ -1,8 +1,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta property="og:title" content="Echosight">
+    <meta property="og:title" content="<%= content_for?(:title) ? yield(:title) : 'Echosight' %>">
     <meta property="og:site_name" content="Echosight">
     <meta property="og:description" content="Optimize your Twitter presence with Echosight: Discover in-depth analytics, track follower growth, monitor engagement, and enhance your tweets for maximum impact.">
-    <meta property="og:url" content="https://app.echosight.io">
+    <meta property="og:url" content="<%= request.original_url %>">
     <meta property="og:type" content="website">
 
     <% if content_for?(:social_graph_image) %>
