--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 <head>
-  <title><%= content_for?(:title) ? yield(:title) : "Echosight" %></title>
-  <%= csrf_meta_tags %>
-  <%= csp_meta_tag %>
-  <%= vite_client_tag %>
-  <%= vite_javascript_tag 'application' %>
-  <%= vite_stylesheet_tag 'application' %>
-</head>
+    <%= render 'shared/analytics' %>
+    <title><%= content_for?(:title) ? yield(:title) : "Echosight" %></title>
+    <%= favicon_link_tag 'favicon.ico' %>
+    <%= render('shared/meta') %>
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
+
+    <%= vite_client_tag %>
+    <%= vite_javascript_tag 'application' %>
+    <%= vite_stylesheet_tag 'application' %>
+  </head>
 <body class="dark:bg-gray-900">
   <main>
     <%= yield %>
